--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+/* body{
+ 
+    background-image: linear-gradient(to right top, #939cab, #7697aa, #c0f9fe, #deeae5, #878b7f);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+} */
