--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -7,12 +7,25 @@
           <form [formGroup]="userContact" (ngSubmit)="onSubmit()">
             <div class="form-group mt-2">
               <label class="h4" for="name">Name</label>
+              
+
               <input type="text" class="form-control" formControlName="name" id="name" placeholder="Enter your name">
+              
             </div>
-            <div class="form-group mt-2">
+          
               <label  class="h4" for="subject">Subject</label>
-              <input type="text" class="form-control " formControlName="subject" id="subject" placeholder="Enter the subject">
-            </div>
+              <div class="d-flex p-2">
+                <input type="text" class="form-control "  id="subject" placeholder="Enter the subject" formControlName="subject">
+            
+                <button type="button" class="btn btn-secondary " (click)="onAdd()">Add</button>
+              </div>
+
+              <div class="d-flex p-2" *ngFor="let sub of SubjectList;let i=index;">
+                <li>{{sub}}</li>
+                 <button type="button" class="btn btn-info lg" (click)="onRemove(i)">Remove</button>
+
+              </div>
+             
             <div  class="form-group text-center mt-1 ">
               <button type="submit" class="btn btn-primary col-6 m-2">Submit</button>
             </div>
@@ -75,7 +88,14 @@
                 
               
               <td *ngIf="editingContactId !== i"><p>{{ contact.name }}</p> </td>
-              <td *ngIf="editingContactId !== i"><p>{{ contact.subject}}</p> </td>
+
+              <td *ngIf="editingContactId !== i">
+                <!-- <li>{{contact.subjectList}}   </li> -->
+                 <ul *ngFor="let sub of  contact.subjectList ;let a=index">
+                  <li>{{ sub}}   </li> 
+               
+                </ul> 
+                </td>
                 
                 <td>
                     <!-- <button *ngIf="editingContactId !== i" (click)="onEdit(i)">Edit</button> -->
@@ -151,7 +171,7 @@
                     </div>
                   </div>
                 </div> -->
-            </tr>
+         </tr>
         </tbody>
     </table>
     </div>
